default.css: partial amelioration of the TOC overflowing issue by reducing how much each nesting shifts to the right

--- a/css/default.css
+++ b/css/default.css
@@ -1,16 +1,19 @@
-div#TOC { float: left;
-          width: 24%;
-          font-size: 10pt;
-          background: #eee;
-          margin-right: 25px;
-          margin-bottom: 10px;
-          line-height: 15pt;
-        }
-div#TOC li {
-    margin-top: 0;
-    list-style-type: none;
+div#TOC{
+	float: left;
+	width: 25%;
+	font-size: 80%;
+	background: #eee;
 }
-div#TOC a { text-decoration: none; }
+div#TOC li{
+	list-style-type: none;
+	margin-right: 0px; padding-right: 0px;
+}
+div#TOC ul li ul li {
+    position: relative;
+    left: -15px
+}
+div#TOC ul { margin-left: 0px; padding-left: 0px; }
+div#TOC ul ul { margin-left: 1em; padding-left: 1em; }
 
 html {
     padding: 0px;
@@ -77,7 +80,7 @@ div#tags, div#page-created, div#last-modified, div#license { font-size: 80%; }
 div#content {
     margin-left: 200px;
     padding-left: 0;
-    line-height: 150%;
+    line-height: 130%; /* see A/B tests */
 }
 
 div#footer {
@@ -130,7 +133,7 @@ img {
 
 ul {
     list-style-type: square;
-    padding-left: 1em;
+/*    padding-left: 1em; */
     margin-left: 1em;
 }
 
